# ae-imgen

./: Cargo.toml
enum_methods/enum_methods_derive/: Cargo.toml
enum_methods/enum_methods_derive/src/: lib.rs
enum_methods/src/: lib.rs
src/: error.rs  main.rs
src/compute_functions/: image.rs  mod.rs  shader.rs  utils.rs
src/gene/: mod.rs
src/gpu/: instance.rs  mod.rs  processing.rs
src/image/: encoder.rs
src/shaders/: compute_frame.wgsl  functions.wgsl
