[package]
name = "ae-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.14", features = ["derive"] }
flume = "0.11.0"
image = "0.25.1"
log = "0.4.21"
pollster = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
typetag = "0.2.16"
wgpu = "0.19.3"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.11"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.7"
# console_log = "1"
# fern = "0.6"
# js-sys = "0.3.69"
# wasm-bindgen = "0.2.87"
# wasm-bindgen-futures = "0.4.42"
# # We need these features in the framework examples and tests
# web-sys = { version = "0.3.69", features = [
#   "Location",
#   "Blob",
#   "RequestInit",
#   "RequestMode",
#   "Request",
#   "ImageData",
#   "Response",
#   "HtmlImageElement",
#   "WebGl2RenderingContext",
#   "CanvasRenderingContext2d",
# ] }
